@@ -362,7 +362,7 @@ class S3(object):
 			size_left -= len(data)
 			if throttle:
 				time.sleep(throttle)
-			info("Sent %d bytes (%d %% of %d)" % (
+			debug("Sent %d bytes (%d %% of %d)" % (
 				(size_total - size_left),
 				(size_total - size_left) * 100 / size_total,
 				size_total))
@@ -376,7 +376,7 @@ class S3(object):
 		response["data"] = http_response.read()
 		response["elapsed"] = timestamp_end - timestamp_start
 		response["size"] = size_total
-		response["speed"] = float(response["size"]) / response["elapsed"]
+		response["speed"] = response["elapsed"] and float(response["size"]) / response["elapsed"] or float(-1)
 		conn.close()
 
 		if response["status"] == 307:
@@ -445,7 +445,7 @@ class S3(object):
 			stream.write(data)
 			md5_hash.update(data)
 			size_recvd += len(data)
-			info("Received %d bytes (%d %% of %d)" % (
+			debug("Received %d bytes (%d %% of %d)" % (
 				size_recvd,
 				size_recvd * 100 / size_total,
 				size_total))
@@ -455,7 +455,7 @@ class S3(object):
 		response["md5match"] = response["headers"]["etag"].find(response["md5"]) >= 0
 		response["elapsed"] = timestamp_end - timestamp_start
 		response["size"] = size_recvd
-		response["speed"] = float(response["size"]) / response["elapsed"]
+		response["speed"] = response["elapsed"] and float(response["size"]) / response["elapsed"] or float(-1)
 		if response["size"] != long(response["headers"]["content-length"]):
 			warning("Reported size (%s) does not match received size (%s)" % (
 				response["headers"]["content-length"], response["size"]))
